--- a/group_vars/all/addons.yaml
+++ b/group_vars/all/addons.yaml
@@ -8,7 +8,7 @@
 ## HELM & CHARTS ##
 ###################
 helm:
-  helm_version: v3.0.3 # or "latest" #https://github.com/kubernetes/helm/releases
+  helm_version: v3.1.2 # or "latest" #https://github.com/kubernetes/helm/releases
   install_script_url: 'https://github.com/kubernetes/helm/raw/master/scripts/get-helm-3' 
   repos: ## stable repo is installed by helm by default, no need for its entry here, add only new ones
   - { name: stable, url: 'http://kubernetes-charts.storage.googleapis.com' }
@@ -50,7 +50,7 @@ helm:
 ## Kured #######
 ## For restaring nodes when needed, in sequencial and proper manner
 ################
-#    - { name: kured, repo: stable/kured, namespace: kube-system, options: '--set extraArgs.period="0h07m0s" --set image.repository={{ images_repo | default ("docker.io") }}/weaveworks/kured ' }
+    - { name: kured, repo: stable/kured, namespace: kube-system, options: '--set extraArgs.period="0h07m0s" --set image.repository={{ images_repo | default ("docker.io") }}/weaveworks/kured ' }
 
 ################
 ## metallb #####
